[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
#criterion = "0.3.4"
criterion = { version = "0.3.4", features = ["html_reports"] }
once_cell = "1.7.2"
proptest = "1.0.0"
#criterion-cpu-time = "0.1.0"

[dependencies.concordium-contracts-common]
version = "0.4.1"
path = "../concordium/concordium-contracts-common"
features = ["derive-serde"]

[dependencies.executor]
version = "0.1.0"
path = "../executor"


[[bench]]
name = "wasm_benches"
harness = false
