[package]
name = "executor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime ={version = "0.29.0"}
anyhow = "1.0.42"
storage = { path = "../storage",version = "0.1.0"}
rand = "0.8.4"
msp = { path = "../msp",version = "0.1.0"}
derive_more = "0.99.2"
serde_json = {version = "1.0", default-features = false, features=["alloc"]}
parity-wasm = "0.42.2"
pwasm-utils = "0.18.2"
lazy_static = "1.4.0"
block-executor = { path = "../block-executor",version = "0.1.0"}
aptos-types = { path = "../geecomove/types",version = "0.0.3"}
geeco-mvhashmap = { path = "../mvhashmap",version = "0.1.0"}
#block-wasm = { path = "../block-wasm",version = "0.1.0"}
#evm = { path = "../evm",version = "0.1.0"}

[dependencies.jni]
version = "0.19.0"
features = ["invocation"]

[dependencies.wasm-transform]
path = "../concordium/wasm-transform"
version = "0"

[dependencies.wasm-chain-integration]
version = "0.1"
path = "../concordium/wasm-chain-integration/"

[dependencies.concordium-contracts-common]
version = "0.4.1"
path = "../concordium/concordium-contracts-common"
features = ["derive-serde"]

[[bin]]
name = "executor"
path = "src/main.rs"

[lib]
name = "executor"
path = "src/lib.rs"
