[package]
name = "storage"
version = "0.1.0"
authors = ["shangsony <shangsong@buaa.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
configure = { path = "../configure",version = "0.1.0"}
log = "0.4.8"
parking_lot = "0.11"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
rusty-leveldb = "0.3.5"

[target.'cfg(unix)'.dependencies]
rocksdb = "0.16.0"