[package]
name = "sputnikvm_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc" ]  }
evm = { version = "0.37.0", default-features = false }
primitive-types =  { version = "0.12.0", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sevm_benchmark"
harness = false