[package]
name = "aptos-types"
description = "Aptos core types"
version = "0.0.3"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-bitvec = { path = "../crates/aptos-bitvec" }
aptos-crypto = { path = "../crates/aptos-crypto" }
aptos-crypto-derive = { path = "../crates/aptos-crypto-derive" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

chrono = { version = "0.4.19", features = ["clock", "serde"] }
hex = "0.4.3"
itertools = "0.10.3"
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = [
    "address20",
] }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
thiserror = "1.0.37"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }

[dev-dependencies]
aptos-crypto = { path = "../crates/aptos-crypto", features = ["fuzzing"] }
claims = "0.7"
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = [
    "address20",
    "fuzzing",
] }
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
serde_json = { version = "1.0.81", features = ["preserve_order"] }

[features]
default = []
fuzzing = [
    "proptest",
    "proptest-derive",
    "aptos-crypto/fuzzing",
    "move-core-types/fuzzing",
]
