[package]
name = "aptos-api-types"
description = "Aptos API Types"
version = "0.0.1"
edition = "2021"

[dependencies]

aptos-types = { path = "../../types" }


move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }


anyhow = "1.0.62"
serde = { version = "1.0.137", features = ["derive", "rc"] }
poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
hex = "0.4.3"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
