[package]
name = "aptos-aggregator"
description = "Aggregator sources for the Aptos blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-crypto = { path = "../../crates/aptos-crypto" }
aptos-state-view = { path = "../../storage/state-view" }
aptos-types = { path = "../../types" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
once_cell = "1.10.0"
smallvec = "1.8.0"

[dev-dependencies]
claims = "0.7"

[features]
default = []
