[package]
name = "aptos-gas"
description = "Gas metering for the Aptos blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-framework = { path = "../framework" }
aptos-gas-algebra-ext = { path = "../gas-algebra-ext" }
aptos-package-builder = { path = "../package-builder" }
aptos-types = { path = "../../types" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-model = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }

[dev-dependencies]
tempfile = "3.3.0"

[features]
testing = ["move-stdlib/testing"]

[[bin]]
name = "aptos-gas-gen-update-proposal"
path = "src/bin/gen_proposal.rs"
