[package]
name = "aptos-module-verifier"
description = "Aptos VM runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
