[package]
name = "aptos-sdk-builder"
description = "Aptos transaction-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-types = { path = "../../types" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

heck = "0.3.2"
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
once_cell = "1.10.0"
regex = "1.5.5"
serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde_yaml = "0.8.24"
structopt = "0.3.21"
textwrap = "0.15.0"

[dev-dependencies]
aptos-cached-packages = { path = "../framework/cached-packages" }
aptos-framework = { path = "../framework" }
tempfile = "3.3.0"
which = "4.2.5"

[features]
default = []
