[package]
name = "aptos-vm"
description = "Aptos VM runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-aggregator = { path = "../aptos-aggregator" }
aptos-block-executor = { path = "../block-executor" }
aptos-crypto = { path = "../../crates/aptos-crypto" }
aptos-crypto-derive = { path = "../../crates/aptos-crypto-derive" }
aptos-framework = { path = "../framework" }
aptos-gas = { path = "../aptos-gas" }
#aptos-logger = { workspace = true }
#aptos-metrics-core = { workspace = true }
aptos-module-verifier = { path = "../aptos-module-verifier" }
aptos-mvhashmap = { path = "../mvhashmap" }
aptos-state-view = { path = "../../storage/state-view" }
aptos-types = { path = "../../types" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

dashmap = "5.2.0"
fail = "0.5.0"
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-stdlib = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["table-extension"], optional = true }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["lazy_natives"] }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
num_cpus = "1.13.1"
once_cell = "1.10.0"
rayon = "1.5.2"
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
smallvec = "1.8.0"
tracing = "0.1.34"
erased-serde = "0.3.13" 
prometheus = { version = "0.13.0", default-features = false }

[dev-dependencies]
aptos-types = { path = "../../types" }
proptest = "1.0.0"

[features]
default = []
mirai-contracts = []
fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing", "aptos-framework/fuzzing"]
failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
testing = ["move-unit-test", "aptos-framework/testing"]
