[package]
name = "aptos-framework"
description = "Aptos stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-aggregator = { path = "../aptos-aggregator" }
aptos-crypto = { path = "../../crates/aptos-crypto",  features = ["fuzzing"] }
aptos-gas-algebra-ext = { path = "../gas-algebra-ext" }
aptos-module-verifier = { path = "../aptos-module-verifier" }
aptos-sdk-builder = { path = "../aptos-sdk-builder" }
aptos-state-view = { path = "../../storage/state-view" }
aptos-types = { path = "../../types" }
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

better_any = "0.1.1"
clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
codespan-reporting = "0.11.1"
curve25519-dalek = "3"
flate2 = "1.0.24"
include_dir = { version = "0.7.2", features = ["glob"] }
itertools = "0.10.3"
libsecp256k1 = "0.7.0"
log = "0.4.17"
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-compiler ={ git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-docgen = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-model = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-package = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stackless-bytecode = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["lazy_natives"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
once_cell = "1.10.0"
proptest = {version = "1.0.0", optional = true }
proptest-derive = {version = "0.3.0", optional = true }
rand_core = "0.5.1"
rayon = "1.5.2"
ripemd = "0.1.1"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
sha2 = "0.9.3"
sha3 = "0.9.1"
siphasher = "0.3.10"
smallvec = "1.8.0"
tempfile = "3.3.0"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }

[dev-dependencies]
#aptos-cached-packages = { path = "cached-packages" }
#aptos-gas = { path = "../aptos-gas" }
#aptos-vm = { path = "../aptos-vm",  features = ["testing"] }
claims = "0.7"
move-cli = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["table-extension"] }

[features]
default = []
fuzzing = ["aptos-types/fuzzing", "proptest", "proptest-derive"]
testing = []

[lib]
doctest = false
