[package]
name = "aptos-mvhashmap"
description = "Move hash map"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-aggregator = { path = "../aptos-aggregator" }
aptos-types = { path = "../../types" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

crossbeam = "0.8.1"
dashmap = "5.2.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
rayon = "1.5.2"
