[package]
name = "aptos-vm-genesis"
description = "Aptos vm genesis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-cached-packages = { path = "../framework/cached-packages" }
aptos-crypto = { path = "../../crates/aptos-crypto" }
aptos-framework = { path = "../framework" }
aptos-gas = { path = "../aptos-gas" }
aptos-state-view = { path = "../../storage/state-view" }
aptos-types = { path = "../../types" }
aptos-vm = { path = "../aptos-vm" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
once_cell = "1.10.0"
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive", "rc"] }

[dev-dependencies]
#aptos-proptest-helpers = { workspace = true }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
proptest = "1.0.0"
proptest-derive = "0.3.0"

[features]
default = []
fuzzing = ["aptos-types/fuzzing", "move-core-types/fuzzing", "move-vm-types/fuzzing"]
