[package]
name = "aptos-bitvec"
description = "Aptos safe bitvec implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
proptest = {version = "1.0.0", optional = true }
proptest-derive = {version = "0.3.0", optional = true }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"

[dev-dependencies]
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_json = { version = "1.0.81", features = ["preserve_order"] }

[features]
fuzzing = ["proptest-derive", "proptest"]
