[package]
name = "aptos-crypto-derive"
description = "Custom derives for `aptos-crypto`"
version = "0.0.3"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }

[dev-dependencies]
anyhow = "1.0.62"
