[package]
name = "aptos-crypto"
description = "Aptos crypto"
version = "0.0.3"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
aptos-crypto-derive = { path = "../../crates/aptos-crypto-derive" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

blst = "0.3.7"
bytes = "1.1.0"
curve25519-dalek = "3"
digest = "0.9.0"
ed25519-dalek = { version = "1.0.0", features = ["std", "serde"] }
hex = "0.4.3"
hkdf = "0.10.0"
libsecp256k1 = "0.7.0"
more-asserts = "0.3.0"
once_cell = "1.10.0"
proptest = {version = "1.0.0", optional = true }
proptest-derive = {version = "0.3.0", optional = true }
rand = "0.7.3"
rand_core = "0.5.1"
ring = { version = "0.16.20", features = ["std"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde-name = "0.1.1"
serde_bytes = "0.11.6"
sha2 = "0.9.3"
static_assertions = "1.1.0"
thiserror = "1.0.37"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
x25519-dalek = "1.2.0"

[dev-dependencies]
bitvec = "0.19.4"
byteorder = "1.4.3"
criterion = "0.3.5"
proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
sha3 = "0.9.1"
trybuild = "1.0.41"

[features]
default = []
assert-private-keys-not-cloneable = []
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]

[[bench]]
name = "bls12381"
harness = false

[[bench]]
name = "ed25519"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "noise"
harness = false

[[bench]]
name = "ristretto255"
harness = false

[[bench]]
name = "secp256k1"
harness = false
