[package]
name = "aptos-cached-packages"
description = "Builds framework packages for caching in builds and tests"
version = "0.1.0"
edition = "2021"
[dependencies]
aptos-framework = { path = "../../framework" }
aptos-types = { path = "../../../types",  features = ["fuzzing"] }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

include_dir = { version = "0.7.2", features = ["glob"] }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
once_cell = "1.10.0"
proptest = {version = "1.0.0", optional = true }
proptest-derive = {version = "0.3.0", optional = true }

[build-dependencies]
aptos-framework = { path = "../../framework" }

[features]
default = []
fuzzing = ["proptest", "proptest-derive"]
